fix large display layout issue

--- a/css/radar.css
+++ b/css/radar.css
@@ -28,6 +28,13 @@
     fill: dimgray;
 }
 
+@media only screen and (min-width: 1500px) {
+
+    #f3_container{
+      width: 1200px;
+    }
+}
+
 @media only screen and (max-width: 840px) {
 
     #f3_container{
