--- a/css/teams.css
+++ b/css/teams.css
@@ -14,6 +14,13 @@
     margin-top: 10px; 
 }
 
+@media only screen and (min-width: 1500px) {
+
+  #dropdown_container{
+    width: 1100px;
+  }
+}
+
 @media only screen and (max-width: 840px) {
 
   #dropdown_container {
@@ -57,6 +64,13 @@
 .axis_title {
   fill: dimgray;
   font-size: 14px;
+}
+
+@media only screen and (min-width: 1500px) {
+
+  #f2_container{
+    width: 1100px;
+  }
 }
 
 @media only screen and (min-width: 620px) and (max-width: 840px) {
